--- a/HOCKEY/AI HOCKEY - 2500.html
+++ b/HOCKEY/AI HOCKEY - 2500.html
@@ -51,6 +51,10 @@
 <script src="teams/bt11.js"></script>
 <script src="teams/bt12.js"></script>
 <script src="teams/bt13.js"></script>
+<script src="teams/bt14.js"></script>
+<script src="teams/bt15.js"></script>
+<script src="teams/bt16.js"></script>
+<script src="teams/bt17.js"></script>
 
 <script src="library.js"></script>
 <script src="node_registry.js"></script>
