--- a/HOCKEY/AI HOCKEY - 2500.html
+++ b/HOCKEY/AI HOCKEY - 2500.html
@@ -55,6 +55,7 @@
 <script src="teams/bt15.js"></script>
 <script src="teams/bt16.js"></script>
 <script src="teams/bt17.js"></script>
+<script src="teams/bt18.js"></script>
 
 <script src="library.js"></script>
 <script src="node_registry.js"></script>
