--- a/HOCKEY/AI HOCKEY - 2500.html
+++ b/HOCKEY/AI HOCKEY - 2500.html
@@ -76,7 +76,12 @@
 // bt10 = FLA
 // bt11 = STL
 // bt12 = DET
-// bt13 = MTX  (Matrix team)
+// bt13 = VGK
+// bt14 = MIN
+// bt15 = PIT
+// bt16 = BOS
+// bt17 = PHI
+// bt18 = ANA
 
 // This version 2500 attempts to add a "formation system" for the ai skaters
 
